# opengpts-project

example/sample-chat-frontend-app/: hashire_merosu.txt  pyproject.toml
example/sample-chat-frontend-app/app/: constants.py  main.py  ui.py
example/sample-slack-bot/: pyproject.toml
example/sample-slack-bot/app/: constants.py  main.py  main_bk.py
libs/opengpt-client/: pyproject.toml
libs/opengpt-client/opengpts_client/: client.py
libs/opengpt-client/opengpts_client/schema/: __init__.py  asistant.py  ingest.py  message.py  thread.py  tools.py
libs/streamlit-google-oauth/: Makefile  pyproject.toml
libs/streamlit-google-oauth/streamlit_google_oauth/: constants.py  google_oauth.py  message.py
